--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="main-container">
         <header>
             <div class="logo">
-                <img src="images/Booki.png" alt="logo Booki" />
+                <img src="./images/logo/Booki.png" alt="logo Booki" />
             </div>
             <div>
                 <nav>
@@ -30,6 +30,11 @@
             </div>
         </header>
         <main>
+            <section class="container">
+                <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                <p>En plein centre ville ou plein nature</p>
+
+            </section>
             <div class="hebergements-and-populaires">
                 <section class="hebergements">
 
